<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:elevation="5dp"
    android:id="@+id/containerCar"
    android:background="@drawable/back_filter"
    android:layout_height="wrap_content">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:weightSum="1"
      android:gravity="right"
      android:orientation="horizontal">

      <ImageView

          android:id="@+id/imagePackReq"
          android:layout_width="93dp"
          android:layout_height="81dp"
          android:layout_gravity="center|top"
          android:layout_margin="5dp"
          android:src="@drawable/laundry" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="right|center"
          android:orientation="vertical">
          <TextView
              android:layout_width="match_parent"
              android:layoutDirection="locale"
              android:text="@string/send"
              android:id="@+id/titlePackageReq"
              android:textSize="20sp"
              android:padding="5dp"
              android:fontFamily="@font/font_bold"
              android:textColor="@color/colorPrimary"
              android:layout_height="wrap_content"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layoutDirection="locale">
              <TextView
                  android:layout_width="wrap_content"
                  android:layoutDirection="locale"
                  android:text="@string/state"
                  android:textSize="18sp"

                  android:padding="5dp"
                  android:fontFamily="@font/font_regular"
                  android:textColor="@color/darkgray"
                  android:layout_height="wrap_content"/>
              <Button
                  android:id="@+id/statusRequest"
                  android:layout_width="120dp"
                  android:layout_height="30dp"
                  android:layout_marginLeft="10dp"
                  android:background="@drawable/wait_btn"
                  android:fontFamily="@font/font_bold"
                  android:text="@string/accepted"
                  android:gravity="center"
                  android:textColor="@color/colorAccent"
                  android:textSize="16sp"
                  />

          </LinearLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
             android:layoutDirection="locale"
              >

              <Button
                  android:id="@+id/pricePackageRequest"
                  android:layout_width="wrap_content"
                  android:layout_height="30dp"
                  android:layout_marginLeft="10dp"
                  android:padding="5dp"
                  android:layout_marginBottom="5dp"
                  android:background="@drawable/back_text"
                  android:drawableLeft="@drawable/ic_money"
                  android:fontFamily="@font/font_regular"

                  android:gravity="center"
                  android:paddingLeft="5dp"
                  android:text="16"
                  android:textColor="@color/darkgray"
                  android:textSize="16sp" />
          </LinearLayout>

      </LinearLayout>



  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="5dp"
        android:background="@color/darkgray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:gravity="right"
            android:text="2019/2/3"
            android:layout_weight="1"
            android:id="@+id/dateReq"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_access_alarm_black_24dp"
            android:fontFamily="@font/font_regular"
            android:textColor="@color/darkgray"
            android:layout_height="wrap_content"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>