<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Auth.profile.profileFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ToolBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:elevation="5dp"
            android:outlineProvider="paddedBounds"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"

            android:gravity="center"
            android:theme="@style/ToolBarTheme">


            <androidx.appcompat.widget.AppCompatTextView


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:drawablePadding="5dp"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:fontFamily="@font/font_bold"

                android:textColor="@color/white"
                android:id="@+id/orders_fragmentBtn"

                />



                <ImageButton
                        android:id="@+id/logoutProfile"
                       android:layout_width="25dp"

                       android:layout_height="25dp"
                       android:layout_gravity="right"
                      android:layout_marginRight="10dp"
                    android:src="@drawable/ic_exit_to_app_black_24dp"

                  android:background="#00FFFFFF"
                android:padding="5dp" />

<!--            <ImageButton-->
<!--                android:id="@+id/editeProfile"-->
<!--                android:layout_width="25dp"-->


<!--                android:layout_height="25dp"-->
<!--                android:src="@drawable/ic_mode_edit_black_24dp"-->
<!--                android:layout_gravity="left"-->
<!--                android:layout_marginRight="10dp"-->


<!--                android:background="#00FFFFFF"-->
<!--                android:padding="5dp" />-->


        </androidx.appcompat.widget.Toolbar>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@color/colorPrimary"

                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                android:layout_gravity="center|top"
             />



        </LinearLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                   android:layoutDirection="locale"

                    android:text="@string/accInfo"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"



                    android:textSize="14dp"
                    android:fontFamily="@font/font_regular"
                    android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:elevation="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/ic_account_circle_black_24dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:text="@string/confirm"
                    android:drawablePadding="10dp"
                   android:layoutDirection="locale"
                    android:id="@+id/userNameProfile"
                    android:textSize="18dp"
                    android:fontFamily="@font/font_regular"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_margin="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/ic_call_24dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:layoutDirection="locale"
                    android:id="@+id/phoneProfile"
                    android:textSize="18dp"
                    android:fontFamily="@font/font_regular"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/ic_location_on_24dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                   android:layoutDirection="locale"
                    android:id="@+id/locProfile"



                    android:textSize="18dp"
                    android:fontFamily="@font/font_regular"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:padding="10dp"

                   android:layoutDirection="locale"

                    android:text="@string/ordAndpack"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"



                    android:textSize="14dp"
                    android:fontFamily="@font/font_regular"
                    android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/ic_check_circle_black_24dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"

                android:padding="10dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:id="@+id/myPackage"
                android:text="@string/myOrders"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:textSize="18dp"
                android:layoutDirection="locale"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:fontFamily="@font/font_regular"
                android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_margin="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/ic_check_box_black_24dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"

                    android:padding="10dp"
                    android:drawablePadding="10dp"
                   android:layoutDirection="locale"
                    android:id="@+id/myRequest"
                    android:text="@string/requests"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"

                    android:textSize="18dp"
                    android:fontFamily="@font/font_regular"
                    android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@color/lightgray"-->
<!--                android:layout_margin="5dp"/>-->
<!--            <androidx.appcompat.widget.AppCompatTextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:drawableRight="@drawable/ic_card_travel_black_24dp"-->
<!--                android:padding="10dp"-->
<!--                android:drawablePadding="10dp"-->
<!--                android:gravity="right"-->
<!--                android:id="@+id/myOrdersHistory"-->
<!--                android:text="الطلبات السابقة"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginBottom="10dp"-->

<!--                android:textSize="18dp"-->
<!--                android:fontFamily="@font/font_regular"-->
<!--                android:drawableLeft="@drawable/ic_chevron_left_black_24dp"-->
<!--                android:layout_height="wrap_content"/>-->

        </LinearLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:layoutDirection="locale"

                    android:text="@string/setting"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"



                    android:textSize="14dp"
                    android:fontFamily="@font/font_regular"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView

                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingTop="5dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:src="@drawable/ic_phonelink_setup_black_24dp"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:padding="10dp"
                            android:drawablePadding="10dp"
                            android:layoutDirection="locale"
                            android:text="@string/UpdataeInf"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:id="@+id/editeProfile"

                            android:textSize="18dp"
                            android:fontFamily="@font/font_regular"
                            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="5dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView

                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingTop="5dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:src="@drawable/ic_lock_open_black_24dp"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:padding="10dp"
                            android:drawablePadding="10dp"
                           android:layoutDirection="locale"
                            android:id="@+id/changePassBt"
                            android:text="@string/changePass"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"

                            android:textSize="18dp"
                            android:fontFamily="@font/font_regular"
                            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                            android:layout_height="wrap_content"/>


                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

<ProgressBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/progProf"
    android:visibility="gone"/>

</FrameLayout>